-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.11.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Jinshan Xiong <jinshan.xiong@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/5ab79694-7d98-11e7-9e43-5254006e85c2.
The sub-test test_35 failed with the following error:
test failed to respond and timed out
Please provide additional information about the failure here.
Info required for matching: sanityn 35
23:46:36:[ 7850.159072] LustreError: 29261:0:(libcfs_fail.h:165:cfs_race()) cfs_race id 318 sleeping 23:46:36:[ 7850.166021] LustreError: 30957:0:(libcfs_fail.h:170:cfs_race()) cfs_fail_race id 318 waking 23:46:36:[ 7850.170410] LustreError: 29261:0:(libcfs_fail.h:168:cfs_race()) cfs_fail_race id 318 awake, rc=0 23:46:36:[ 7850.174782] LustreError: 29261:0:(mdc_request.c:1328:mdc_read_page()) lustre-MDT0000-mdc-ffff880067c40000: [0x200007164:0x6:0x0] lock enqueue fails: rc = -4 23:46:36:[ 7850.182752] Lustre: dir [0x2c00013a0:0xa:0x0] stripe 1 readdir failed: -4, directory is partially accessed! 23:46:36:[ 7850.191827] LustreError: 29261:0:(lmv_obd.c:2122:stripe_dirent_next()) ASSERTION( hash <= end ) failed: 23:46:36:[ 7850.196278] LustreError: 29261:0:(lmv_obd.c:2122:stripe_dirent_next()) LBUG 23:46:36:[ 7850.199151] Pid: 29261, comm: ls 23:46:36:[ 7850.202731] 23:46:36:[ 7850.202731] Call Trace: 23:46:36:[ 7850.209235] [<ffffffffa070b7ee>] libcfs_call_trace+0x4e/0x60 [libcfs] 23:46:36:[ 7850.212997] [<ffffffffa070b87c>] lbug_with_loc+0x4c/0xb0 [libcfs] 23:46:36:[ 7850.216695] [<ffffffffa095f07c>] stripe_dirent_next+0x33c/0x922 [lmv] 23:46:36:[ 7850.220405] [<ffffffffa095f8d9>] lmv_striped_read_page.isra.29+0x277/0x5e8 [lmv] 23:46:36:[ 7850.223563] [<ffffffffa094c503>] lmv_read_page+0x4e3/0x550 [lmv] 23:46:36:[ 7850.226019] [<ffffffffa0c2d6a8>] ll_get_dir_page+0xc8/0x380 [lustre] 23:46:36:[ 7850.228433] [<ffffffffa0c6bf20>] ? ll_md_blocking_ast+0x0/0x730 [lustre] 23:46:36:[ 7850.230825] [<ffffffffa0c2dc34>] ll_dir_read+0x214/0x320 [lustre] 23:46:36:[ 7850.233247] [<ffffffff81212c00>] ? filldir+0x0/0xf0 23:46:36:[ 7850.235466] [<ffffffff81212c00>] ? filldir+0x0/0xf0 23:46:36:[ 7850.237609] [<ffffffffa0c2de59>] ll_readdir+0x119/0x4f0 [lustre] 23:46:36:[ 7850.239809] [<ffffffff81212c00>] ? filldir+0x0/0xf0 23:46:36:[ 7850.241879] [<ffffffff81212af0>] vfs_readdir+0xb0/0xe0 23:46:36:[ 7850.243937] [<ffffffff81212f15>] SyS_getdents+0x95/0x120 23:46:36:[ 7850.246042] [<ffffffff81697809>] system_call_fastpath+0x16/0x1b
The kernel on client node crashed.